Quick edits and renames

--- a/notebooks/Gao-2018-examples.ipynb
+++ b/notebooks/Gao-2018-examples.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Gao et al., 2018 - A DataJoint example"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "This notebook replicates selected figures from Gao et al., 2018. **A cortico-cerebellar loop for motor planning**  \n",
     "\n",
     "Link to the publication:  https://www.nature.com/articles/s41586-018-0633-x  \n",
@@ -12,7 +19,9 @@
     "\n",
     "This study revealed a cortical-cerebellar loop for motor planning with electrophysiological recording and optogenetics perturbations, within a behavioral paradigm of delayed somatosensory discrimination task. The two brain areas studied were anterior lateral motor cortex (ALM), and cerebellar nuclei (CN). The study first shows that both ALM and CN are responsive during the delay period (Fig 2), and are selective to trials in one location, suggesting their roles in motor planning. Inibibition of either ALM or CN disrupted the selectivity of the other area (Fig 3). Finally, the study compared the effect of activating Dentate and Fastigial cerebellar nuclei on the discriminability of the ALM neurons (Fig 4), and found that Fastigial nucleus is more important for ALM discriminability during the delay period.\n",
     "\n",
-    "In this notebook, we replicated the a subset of the major results, from the data recorded in ALM.\n"
+    "A ***DataJoint*** data pipeline has been constructed for this study, with the presented data ingested into this pipeline. This notebook demonstrates the queries, processing, and reproduction of several figures from the paper. From the pipeline, export capability to ***NWB 2.0*** format is also available.\n",
+    "\n",
+    "In this notebook, we replicated the a subset of the major results, from the data recorded in ALM."
    ]
   },
   {
@@ -928,11 +937,6 @@
    "source": [
     "Three dashed vertical lines marked the onset of sample period, delay period, and the response period, individually. The plot shows that ALM neurons are selective from the sampling period to the delay period, suggesting its role in motor planning."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -3528,7 +3532,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
